@@ -154,6 +154,8 @@ task copyMasterSheets(type: Copy) {
 
 compileJava {
     it.dependsOn 'copyMasterSheets'
+    it.options.compilerArgs.add('--enable-preview')
+}
 }
 
 /*
